# leptonyx

./: .gitignore  CMakeLists.txt  README.md
include/: testing.h
include/leptonyx/: af.h  common.h  log.h  message.h  socket.h  stringbuilder.h  thread.h
src/: log.c  main.c  stringbuilder.c  test_stringbuilder.c
src/socket/: af.c  message.c  socket.c  test_message.c
src/socket/windows/: lookup.i  socket.i
